# docker-ai

./: .gitignore  README.md  main.py  pyproject.toml
tests/: test_cli.py
